--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
                 </div>
                 <div class="imagen">
                 </div>
-                <p><strong lang="es">Diablo</strong> es una serie de <strong lang="es">videojuegos</strong> pertenecientes al género de acción,<abbr title="Un videojuego de rol o juego de rol por computadora/ordenador, también llamado por simplificación juego de rol, o referido con la sigla inglesa RPG o CRPG, es un género de videojuegos donde el jugador controla las acciones de un personaje inmerso en algún detallado mundo."> ROL</abbr>, y de Videojuegos de mazmorras desarrollada por <strong lang="en">Blizzard North</strong> y continuada por <abbr title="Blizzard Entertainment, Inc. es una empresa desarrolladora y distribuidora de videojuegos estadounidense con sede en Irvine, California, propiedad de Activision Blizzard y fundada el 1 de febrero de 1994"><strong lang="en">Blizzard Entertainment</strong></abbr> después del cierre del estudio del norte en 2005. La serie se compone de cuatro videojuegos principales: <strong lang="es">Diablo I, Diablo II, Diablo III y Diablo IV.</strong></p>
+                <p><strong lang="es">Diablo</strong> es una serie de <strong lang="es">videojuegos</strong> pertenecientes al género de acción,<abbr title="El concepto está vinculado a la función o papel que cumple alguien o algo."> ROL</abbr>, y de Videojuegos de mazmorras desarrollada por <strong lang="en">Blizzard North</strong> y continuada por <strong lang="en">Blizzard Entertainment</strong> después del cierre del estudio del norte en 2005. La serie se compone de cuatro videojuegos principales: <strong lang="es">Diablo I, Diablo II, Diablo III y Diablo IV.</strong></p>
 
-                <p>La serie está ambientada en el mundo de fantasía de <abbr title="también conocido como el mundo mortal"><strong lang="es">Santuario</strong></abbr>. Los tres videojuegos de la serie tienen lugar en áreas geográficas similares, con varias áreas comunes, incluida la ciudad de <em lang="es">Tristram</em> y la región alrededor de <em lang="es">Monte Arreat</em>. La configuración adicional es proporcionada por los Cielos Altos y los Infiernos Ardientes, dos reinos separados vinculados al Santuario. La serie se centra en la batalla entre los humanos que viven en Santuario y los Demonios primarios, demonios que son liderados por Diablo, el principal antagonista de la serie. Los humanos son ocasionalmente ayudados por ángeles, especialmente el arcángel de la justicia, <abbr title="Tyrael es un arcángel, es uno de los protagonistas en la historia, cuya primera aparicion fue en Diablo 2"><strong lang="es">Tyrael</strong></abbr> . Los personajes en el mundo de Santuario son principalmente humanos, ángeles y varias clases de demonios y monstruos.</p>
+                <p>La serie está ambientada en el mundo de fantasía de <strong lang="es">Santuario</strong>. Los tres videojuegos de la serie tienen lugar en áreas geográficas similares, con varias áreas comunes, incluida la ciudad de <strong lang="es">Tristram</strong> y la región alrededor de <em lang="es">Monte Arreat</em>. La configuración adicional es proporcionada por los Cielos Altos y los Infiernos Ardientes, dos reinos separados vinculados al Santuario. La serie se centra en la batalla entre los humanos que viven en Santuario y los Demonios primarios, demonios que son liderados por Diablo, el principal antagonista de la serie. Los humanos son ocasionalmente ayudados por ángeles, especialmente el arcángel de la justicia, <strong lang="es">Tyrael</strong>. Los personajes en el mundo de Santuario son principalmente humanos, ángeles y varias clases de demonios y monstruos.</p>
             </section>   
             <!-- ----------------------------------------------------juegos------------------------------------------ -->
             <section class="contenedores" id="juegos">
@@ -61,7 +61,7 @@
                         <img src="img/histioria/mefisto_diablo2.png" alt="">
                     </figure>
                     <p>
-                        La historia de <strong lang="es">Diablo II</strong> se lleva a cabo poco después del final de la original Diablo. Al final del Diablo, Diablo, <em>Señor del Terror</em> fue derrotado por un héroe mortal. El héroe que mató a <abbr title="es decir, el personaje del primer juego">Diablo</abbr>, impulsa la <abbr title="una piedra mágica que contiene el alma de un demonio o Ángel">piedra de alma</abbr> de Diablo en su propia cabeza en un intento de contener Diablo en su propio cuerpo. Después de este evento, el héroe es rápidamente corrompido por el Diablo y pierde el control del alma de Diablo lentamente. En la apertura cinematica del Diablo II, <strong lang="en">Marius</strong>, el narrador de la historia, los testigos del <abbr title="conocido como el Nómada de la Oscuridad">héroe caído</abbr> perder el control totalmente, desatando los demonios del infierno en una taberna . Mario es el único sobreviviente, y él se siente obligado a seguir el Vagabundo por razones que él mismo no entiende. El personaje del jugador nuevo es un héroe diferente siguiendo la estela de la destrucción, persiguiendo el <em>Nómada de la Oscuridad</em>, con la esperanza de poner fin al señor demonio dentro de él. El nuevo héroe en última instancia, se pone al día con el vagabundo de la ciudad de Kurast, pero es incapaz de detenerlo. El resto de la historia se revela a través de los cuatro actos, ya que el jugador no se enfrenta sólo el señor de los demonios Diablo, pero dos nuevos villanos principales, sus hermanos, compañeros igualmente malévolos demonios mayores <strong>Mephisto, Señor del Odio</strong> y <strong>Baal, Señor de la Destrucción</strong>. Diablo está determinado a liberarse de su piedra de alma cárcel, que se impuso a los tres hace mucho tiempo, y de la que Diablo logró liberarse en el primer juego. El héroe viaja a través de diferentes tierras para frustrar las fuerzas de las tierras infernales a partir de la conquista del mundo conocido como Santuario.
+                        La historia de <strong lang="es">Diablo II</strong> se lleva a cabo poco después del final de la original Diablo. Al final del Diablo, Diablo, <em>Señor del Terror</em> fue derrotado por un héroe mortal. El héroe que mató a <strong>Diablo</strong>, impulsa la piedra de alma de Diablo en su propia cabeza en un intento de contener Diablo en su propio cuerpo. Después de este evento, el héroe es rápidamente corrompido por el Diablo y pierde el control del alma de Diablo lentamente. En la apertura cinematica del Diablo II, <strong lang="en">Marius</strong>, el narrador de la historia, los testigos del héroe caído perder el control totalmente, desatando los demonios del infierno en una taberna . Mario es el único sobreviviente, y él se siente obligado a seguir el Vagabundo por razones que él mismo no entiende. El personaje del jugador nuevo es un héroe diferente siguiendo la estela de la destrucción, persiguiendo el <em>Nómada de la Oscuridad</em>, con la esperanza de poner fin al señor demonio dentro de él. El nuevo héroe en última instancia, se pone al día con el vagabundo de la ciudad de Kurast, pero es incapaz de detenerlo. El resto de la historia se revela a través de los cuatro actos, ya que el jugador no se enfrenta sólo el señor de los demonios Diablo, pero dos nuevos villanos principales, sus hermanos, compañeros igualmente malévolos demonios mayores <strong>Mephisto, Señor del Odio</strong> y <strong>Baal, Señor de la Destrucción</strong>. Diablo está determinado a liberarse de su piedra de alma cárcel, que se impuso a los tres hace mucho tiempo, y de la que Diablo logró liberarse en el primer juego. El héroe viaja a través de diferentes tierras para frustrar las fuerzas de las tierras infernales a partir de la conquista del mundo conocido como Santuario.
                     </p>
                 </div>
                 <h3>Diablo III</h3>
@@ -70,7 +70,7 @@
                         <img src="img/histioria/samael_diablo3.jpg" alt="">
                     </figure>
                     <p>
-                        El mundo fue salvado de su destrucción hace veinte años por un puñado de héroes sin nombre en Diablo y Diablo II, héroes que, después de haber sobrevivido al ataque por los ejércitos de los infiernos, han vuelto locos de sus sufrimientos. Corresponde a una nueva generación de héroes para hacer frente a las fuerzas del mal que amenazan al mundo del Santuario. Los jugadores tendrán la oportunidad de explorar lugares conocidos como <em>Tristán</em>, en el oscuro mundo fantastico de Santuario.
+                        El mundo fue salvado de su destrucción hace veinte años por un puñado de héroes sin nombre en Diablo y Diablo II, héroes que, después de haber sobrevivido al ataque por los ejércitos de los infiernos, han vuelto locos de sus sufrimientos. Corresponde a una nueva generación de héroes para hacer frente a las fuerzas del mal que amenazan al mundo del Santuario. Los jugadores tendrán la oportunidad de explorar lugares conocidos como Tristán, en el oscuro mundo fantastico de Santuario.
 
                         Han pasado dos décadas desde la última vez que los señores infernales <strong lang="en">-Diablo, Mefisto y Baal</strong>- deambularon por el mundo de Santuario, sometiendo a la humanidad a su limpio antojo. Sin embargo, la memoria de aquellos que lucharon frente a frente contra los ejércitos de la perversidad se desvanece lentamente y las heridas del alma aún escuecen.
 
@@ -166,7 +166,7 @@
                 <h3>Diablo II: Lord Of Destruction</h3>                    
                 <h4>Andariel</h4>
                 <div class="contenedor-personaje">
-                    <p><strong>Andariel</strong> es una de los cuatro males menores, y la única mujer de los siete poderosos del infierno. Ella es una Succubus del submundo que ha sido enviada por Diablo para invadir la <abbr title="también conocido como las Arpías"><strong>Ciudadela de la Hermandad del Ojo Ciego</strong></abbr>, con el fin de cerrar el paso a través de las montañas en la región oriental de <em>tierras de Aranoch</em>, de modo que nadie sería capaz de seguir Diablo en su disfraz del <em>Errante Oscuro</em> y le impida la liberación de su hermano Baal desde la <strong>Tumba de Tal Rasha</strong>. Se dice que andariel fue rechazada del infierno y expulsada. Durante el asalto al Monasterio de las Arpías, muchas hermanas fueron asesinadas y otras fueron corrompidas y se convirtieron al servicio de la <em>Reina Succubo</em>,como <em>Cuervo Sangriento</em>. Los sobrevivientes huyeron y el monasterio se convirtió en refugio de todo demonio invocado por andariel, por todo el desierto, aun en estas condiciones se logró establecer el <em>Campamento de la Arpías</em>. Ella es conocida en el infierno como la <em>Doncella de la Angustia</em>, y es la hija de <em>Lilith</em> y la nieta de <strong>Mefisto Señor Del Odio</strong>.</p>
+                    <p><strong>Andariel</strong> es una de los cuatro males menores, y la única mujer de los siete poderosos del infierno. Ella es una Succubus del submundo que ha sido enviada por Diablo para invadir la <strong>Ciudadela de la Hermandad del Ojo Ciego</strong>, con el fin de cerrar el paso a través de las montañas en la región oriental de <em>tierras de Aranoch</em>, de modo que nadie sería capaz de seguir Diablo en su disfraz del <em>Errante Oscuro</em> y le impida la liberación de su hermano Baal desde la <strong>Tumba de Tal Rasha</strong>. Se dice que andariel fue rechazada del infierno y expulsada. Durante el asalto al Monasterio de las Arpías, muchas hermanas fueron asesinadas y otras fueron corrompidas y se convirtieron al servicio de la <em>Reina Succubo</em>,como <em>Cuervo Sangriento</em>. Los sobrevivientes huyeron y el monasterio se convirtió en refugio de todo demonio invocado por andariel, por todo el desierto, aun en estas condiciones se logró establecer el <em>Campamento de la Arpías</em>. Ella es conocida en el infierno como la <em>Doncella de la Angustia</em>, y es la hija de <em>Lilith</em> y la nieta de <strong>Mefisto Señor Del Odio</strong>.</p>
                     <img src="img/enemigos/andariel.webp" alt="Demonio Andariel">
                 </div>
                 <h4>Duriel</h4>
@@ -254,8 +254,8 @@
                             <img src="img/novelas/kingdom_shadow.jpg" alt="">
                             <p>
                                 Desde el comienzo de los tiempos, las huestes angelicales de los <em>Altos Cielos</em> y las hordas demoníacas de los <em>Infiernos Abrasadores</em>, han estado luchando por el destino de toda la Creación. Esa lucha ha llegado al reino mortal ... y ni Hombre ni Demonio ni Ángel quedará intacto ...
-                                La leyenda habla de una ciudad muerta hace mucho tiempo conocida como <strong>Ureh</strong>, considerado por muchos haber sido una puerta de entrada a la Altos Cielos. Se cree que cada dos mil años, cuando las estrellas se alinean y la sombra del <em>Monte Nymyr</em> recae sobre las ruinas, y todas sus riquezas perdidas se revelan a aquellos lo suficientemente valientes como para buscarlas.
-                                Ahora, después de una vida de investigación y cálculo intenso, el hechicero <strong>Vizjerei Quov Tsin</strong>, ha venido a presenciar el renacimiento de Ureh por sí mismo. Pero lo que aguarda a Tsin y su banda de mercenarios contratados no es nada parecido a lo que esperaban. Se darán cuenta de que el sueño de una radiante Ureh es, en realidad, una pesadilla retorcida de horror, una que les atraerá inexorablemente hacia <strong>El Reino de las Sombras</strong>. 
+                                <strong>Ureh</strong>, considerado por muchos haber sido una puerta de entrada a la Altos Cielos. Se cree que cada dos mil años, cuando las estrellas se alinean y la sombra del <em>Monte Nymyr</em> recae sobre las ruinas, y todas sus riquezas perdidas se revelan a aquellos lo suficientemente valientes como para buscarlas.
+                                El hechicero <strong>Vizjerei Quov Tsin</strong>, ha venido a presenciar el renacimiento de Ureh por sí mismo. Pero lo que aguarda a Tsin y su banda de mercenarios contratados no es nada parecido a lo que esperaban.
                             </p>
                         </div>
                     </li>
@@ -267,7 +267,7 @@
                             <img src="img/novelas/moon_spider.jpg" alt="">
                             <p>
                                 Desde el principio de los tiempos, las huestes angelicales de los <em>Altos Cielos</em> y las hordas demoníacas de los <em>Infiernos Ardientes</em> han estado enzarzadas en una lucha por el destino de toda la Creación. Esa lucha ahora ha llegado al reino de los mortales... y ni el Hombre ni el Demonio ni el Ángel saldrán ilesos...
-                                Llevado por las pesadillas a las ruinas de una tumba misteriosa, <strong>Lord Aldric Jitan</strong> espera despertar un terrible mal que ha estado dormido desde la caída de <em>Tristram</em>. Atraído por la creciente oscuridad en la tierra, el enigmático Nigromante, <strong>Zayl</strong>, tropieza con el plan de <strong>Jitan</strong>, sin saber que uno de sus propios hermanos ha puesto en marcha estos terribles eventos. Ahora, cuando sale la <em>Luna celestial de la Araña</em>, el infame demonio, <strong>Astrogha</strong>, se prepara para desatar a sus secuaces sobre Santuario.
+                                Llevado por las pesadillas a las ruinas de una tumba misteriosa, <strong>Lord Aldric Jitan</strong> espera despertar un terrible mal que ha estado dormido desde la caída de <strong>Tristram</strong>. Atraído por la creciente oscuridad en la tierra, el enigmático Nigromante, <strong>Zayl</strong>, tropieza con el plan de <strong>Jitan</strong>, sin saber que uno de sus propios hermanos ha puesto en marcha estos terribles eventos. Ahora, cuando sale la <em>Luna celestial de la Araña</em>, el infame demonio, <strong>Astrogha</strong>, se prepara para desatar a sus secuaces sobre Santuario.
                             </p>
                         </div>
                     </li>
@@ -275,20 +275,20 @@
             </section>
         </main>
     </div>
+    <footer>
+        <div class="perfil_log">
+            <img src="img/foto_perfil.jpg" alt="">
+        </div>
+        <div class="datos">
+            <p>Nombre y Apellido: Mauro Alejandro Soto</p>
+            <p>Edad:32</p>
+            <p>Mail:mauro.soto@davinci.edu.ar</p>
+        </div>
+        <div class="social_media">
+            <a href="https://www.facebook.com/mauro.soto2/" target="_blank"><img src="img/face.webp" alt="facebook_logo"></a>
+            <a href="https://www.instagram.com/mauro_drako/" target="_blank"><img src="img/insta.webp" alt="instagram_logo"></a>
+            <a href="https://www.linkedin.com/in/mauro-alejandro-soto/" target="_blank"><img src="img/linkedin.png" alt="linkedin_logo"></a>
+        </div>
+    </footer>    
 </body>
-<footer>
-    <div class="perfil_log">
-        <img src="img/foto_perfil.jpg" alt="">
-    </div>
-    <div class="datos">
-        <p>Nombre y Apellido: Mauro Alejandro Soto</p>
-        <p>Edad:32</p>
-        <p>Mail:mauro.soto@davinci.edu.ar</p>
-    </div>
-    <div class="social_media">
-        <a href="https://www.facebook.com/mauro.soto2/" target="_blank"><img src="img/face.webp" alt="facebook_logo"></a>
-        <a href="https://www.instagram.com/mauro_drako/" target="_blank"><img src="img/insta.webp" alt="instagram_logo"></a>
-        <a href="https://www.linkedin.com/in/mauro-alejandro-soto/" target="_blank"><img src="img/linkedin.png" alt="linkedin_logo"></a>
-    </div>
-</footer>
 </html>
